[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tk-md2html"
version = "0.1.0"
description = "A simple command-line tool to convert basic markdown syntax to HTML. Written by Tobias Kisling"
readme = "README.md"
authors = [{name = "Tobias Kisling", email = "hasederhi.12@gmail.com"}]
license = {file = "LICENSE"}
dependencies = []

[project.scripts]
my_script = "my_module.my_script:main"  # Makes it runnable with "my_script" in CLI
